@@ -8092,3 +8092,8 @@ EPRINTS-3.1-beta-2
 
 2009-03-20 cjg
  * Added edit locking.
+
+2009-03-24 tdb
+ * Modified MetaField internals to not copy defaults on initialisation - all
+    accesses to properties must go through get_property/set_property
+
